Implement TLS context reloading.