@@ -17,23 +17,28 @@
 
 package com.io7m.cardant.server.service.maintenance;
 
+import com.io7m.cardant.database.api.CADatabaseException;
 import com.io7m.cardant.database.api.CADatabaseQueriesMaintenanceType;
+import com.io7m.cardant.database.api.CADatabaseRole;
+import com.io7m.cardant.database.api.CADatabaseTransactionType;
 import com.io7m.cardant.database.api.CADatabaseType;
-import com.io7m.cardant.database.api.CADatabaseUnit;
 import com.io7m.cardant.server.service.clock.CAServerClock;
+import com.io7m.cardant.server.service.configuration.CAConfigurationServiceType;
 import com.io7m.cardant.server.service.telemetry.api.CAServerTelemetryServiceType;
+import com.io7m.cardant.server.service.tls.CATLSContextServiceType;
 import com.io7m.repetoir.core.RPServiceType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.time.Duration;
-import java.time.temporal.ChronoUnit;
 import java.util.Objects;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 
-import static com.io7m.cardant.database.api.CADatabaseRole.CARDANT;
+import static com.io7m.cardant.database.api.CADatabaseUnit.UNIT;
 
 /**
  * A service that performs nightly database maintenance.
@@ -45,29 +50,52 @@ public final class CAMaintenanceService
   private static final Logger LOG =
     LoggerFactory.getLogger(CAMaintenanceService.class);
 
-  private final ScheduledExecutorService executor;
+  private final ExecutorService executor;
+  private final CAServerClock clock;
   private final CAServerTelemetryServiceType telemetry;
   private final CADatabaseType database;
+  private final CATLSContextServiceType tlsContexts;
+  private final CAConfigurationServiceType configuration;
+  private final AtomicBoolean closed;
+  private final CompletableFuture<Void> waitTLS;
+  private final CompletableFuture<Void> waitMaintenance;
 
   private CAMaintenanceService(
-    final ScheduledExecutorService inExecutor,
+    final ExecutorService inExecutor,
+    final CAServerClock inClock,
     final CAServerTelemetryServiceType inTelemetry,
-    final CADatabaseType inDatabase)
+    final CADatabaseType inDatabase,
+    final CATLSContextServiceType inTlsContexts,
+    final CAConfigurationServiceType inConfiguration)
   {
     this.executor =
       Objects.requireNonNull(inExecutor, "executor");
+    this.clock =
+      Objects.requireNonNull(inClock, "clock");
     this.telemetry =
       Objects.requireNonNull(inTelemetry, "telemetry");
     this.database =
       Objects.requireNonNull(inDatabase, "database");
+    this.tlsContexts =
+      Objects.requireNonNull(inTlsContexts, "tlsContexts");
+    this.configuration =
+      Objects.requireNonNull(inConfiguration, "configuration");
+    this.closed =
+      new AtomicBoolean(false);
+    this.waitTLS =
+      new CompletableFuture<Void>();
+    this.waitMaintenance =
+      new CompletableFuture<Void>();
   }
 
   /**
-   * A service that performs nightly database maintenance.
+   * A service that performs nightly maintenance.
    *
-   * @param clock     The clock
-   * @param telemetry The telemetry service
-   * @param database  The database
+   * @param clock         The clock
+   * @param telemetry     The telemetry service
+   * @param database      The database
+   * @param configuration The configuration service
+   * @param tlsContexts   The TLS contexts
    *
    * @return The service
    */
@@ -75,63 +103,113 @@ public final class CAMaintenanceService
   public static CAMaintenanceService create(
     final CAServerClock clock,
     final CAServerTelemetryServiceType telemetry,
+    final CAConfigurationServiceType configuration,
+    final CATLSContextServiceType tlsContexts,
     final CADatabaseType database)
   {
     Objects.requireNonNull(clock, "clock");
-    Objects.requireNonNull(telemetry, "telemetry");
+    Objects.requireNonNull(configuration, "configuration");
     Objects.requireNonNull(database, "database");
+    Objects.requireNonNull(telemetry, "telemetry");
+    Objects.requireNonNull(tlsContexts, "tlsContexts");
 
     final var executor =
-      Executors.newSingleThreadScheduledExecutor(r -> {
-        final var thread = new Thread(r);
-        thread.setDaemon(true);
-        thread.setName(
-          "com.io7m.cardant.server.service.maintenance.CAMaintenanceService[%d]".formatted(
-            thread.getId()));
-        return thread;
-      });
+      Executors.newThreadPerTaskExecutor(
+        Thread.ofVirtual()
+          .name("com.io7m.cardant.maintenance-", 0L)
+          .factory()
+      );
 
     final var maintenanceService =
-      new CAMaintenanceService(executor, telemetry, database);
+      new CAMaintenanceService(
+        executor,
+        clock,
+        telemetry,
+        database,
+        tlsContexts,
+        configuration
+      );
 
-    final var timeNow =
-      clock.now();
-    final var timeNextMidnight =
-      timeNow.withHour(0)
-        .withMinute(0)
-        .withSecond(0)
-        .plusDays(1L);
-
-    final var initialDelay =
-      Duration.between(timeNow, timeNextMidnight).toSeconds();
-
-    final var period =
-      Duration.of(1L, ChronoUnit.DAYS)
-        .toSeconds();
-
-    /*
-     * Run maintenance as soon as the service starts.
-     */
-
-    executor.submit(maintenanceService::runMaintenance);
-
-    /*
-     * Schedule maintenance to run at each midnight.
-     */
-
-    executor.scheduleAtFixedRate(
-      maintenanceService::runMaintenance,
-      initialDelay,
-      period,
-      TimeUnit.SECONDS
-    );
-
+    executor.execute(maintenanceService::runTLSReloadTask);
+    executor.execute(maintenanceService::runMaintenanceTask);
     return maintenanceService;
+  }
+
+  /**
+   * A task that executes maintenance once when the service starts, and then
+   * again at every subsequent midnight.
+   */
+
+  private void runMaintenanceTask()
+  {
+    while (!this.closed.get()) {
+      try {
+        this.runMaintenance();
+      } catch (final Exception e) {
+        // Not important.
+      }
+
+      final var timeNow =
+        this.clock.now();
+      final var timeNextMidnight =
+        timeNow.withHour(0)
+          .withMinute(0)
+          .withSecond(0)
+          .plusDays(1L);
+
+      final var untilNext =
+        Duration.between(timeNow, timeNextMidnight);
+
+      try {
+        this.waitMaintenance.get(untilNext.toSeconds(), TimeUnit.SECONDS);
+      } catch (final Exception e) {
+        break;
+      }
+    }
+  }
+
+  /**
+   * A task that reloads TLS contexts at the specified reload interval.
+   */
+
+  private void runTLSReloadTask()
+  {
+    final var reloadIntervalOpt =
+      this.configuration.configuration()
+        .maintenanceConfiguration()
+        .tlsReloadInterval();
+
+    if (reloadIntervalOpt.isEmpty()) {
+      return;
+    }
+
+    final var reloadInterval =
+      reloadIntervalOpt.get();
+
+    while (!this.closed.get()) {
+      try {
+        this.runTLSReload();
+      } catch (final Exception e) {
+        // Not important.
+      }
+
+      try {
+        this.waitTLS.get(reloadInterval.toSeconds(), TimeUnit.SECONDS);
+      } catch (final Exception e) {
+        break;
+      }
+    }
+  }
+
+  private void runTLSReload()
+  {
+    LOG.info("Reloading TLS contexts");
+    this.tlsContexts.reload();
   }
 
   private void runMaintenance()
   {
-    LOG.info("maintenance task starting");
+    LOG.info("Maintenance task starting");
 
     final var span =
       this.telemetry.tracer()
@@ -140,22 +218,34 @@ public final class CAMaintenanceService
 
     try (var ignored = span.makeCurrent()) {
       try (var connection =
-             this.database.openConnection(CARDANT)) {
+             this.database.openConnection(CADatabaseRole.CARDANT)) {
         try (var transaction =
                connection.openTransaction()) {
-          final var maintenance =
-            transaction.queries(CADatabaseQueriesMaintenanceType.ExecuteType.class);
-          maintenance.execute(CADatabaseUnit.UNIT);
-          transaction.commit();
-          LOG.info("maintenance task completed successfully");
+
+          try {
+            executeDatabaseMaintenance(transaction);
+          } catch (final Exception e) {
+            span.recordException(e);
+          }
+
+          LOG.info("Maintenance task completed.");
         }
       }
     } catch (final Exception e) {
-      LOG.error("maintenance task failed: ", e);
+      LOG.error("Maintenance task failed: ", e);
       span.recordException(e);
     } finally {
       span.end();
     }
+  }
+
+  private static void executeDatabaseMaintenance(
+    final CADatabaseTransactionType transaction)
+    throws CADatabaseException
+  {
+    transaction.queries(CADatabaseQueriesMaintenanceType.ExecuteType.class)
+      .execute(UNIT);
+    transaction.commit();
   }
 
   @Override
@@ -166,9 +256,12 @@ public final class CAMaintenanceService
 
   @Override
   public void close()
-    throws Exception
   {
-    this.executor.shutdown();
+    if (this.closed.compareAndSet(false, true)) {
+      this.waitTLS.complete(null);
+      this.waitMaintenance.complete(null);
+      this.executor.close();
+    }
   }
 
   @Override
